base commit for working graalvm image